[tool.poetry]
name = "exencolor"
version = "1.1.2"
description = "A modern module for colored output."
authors = ["Exenifix"]
license = "MIT"
repository = "https://github.com/Exenifix/exencolor"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
